<resources>
    <string name="app_name">VenusMatch</string>
    <string name="dashboard">Home</string>
    <string name="messages">Messages</string>
    <string name="user_profile">Profile</string>
    <string name="profile_pic_desc">Profile picture</string>
    <string name="upload_pic_desc">Upload picture</string>
    <string name="about_label">About Me</string>
    <string name="preferences_label">Preferences</string>
    <string name="male_pref">Males</string>
    <string name="female_pref">Females</string>
    <string name="about_desc">Tell us a little about yourself…</string>
    <string name="save_btn">Save</string>
    <string name="edit_btn">Edit</string>
    <string name="gender_pref">I am interested in:</string>
    <string name="age_pref">I am looking for someone aged:</string>
    <string name="age_cat_18">18–25</string>
    <string name="age_cat_26">26–35</string>
    <string name="age_cat_36">36–45</string>
    <string name="age_cat_46">46–55</string>
    <string name="age_cat_56">56–65</string>
    <string name="age_cat_66">66+</string>
    <string name="employment_status">I am looking for someone who is:</string>
    <string name="full_time">Employed full-time</string>
    <string name="part_time">Employed part-time</string>
    <string name="casual_emp">Employed casual hours</string>
    <string name="student">A student</string>
    <string name="dating_pref">I want something:</string>
    <string name="cas_dating">Casual</string>
    <string name="serious_dating">Serious</string>
    <string name="edit_pref">Edit preferences</string>
    <string name="title_activity_preference">Settings</string>
    <string name="location">I am looking for someone who lives in:</string>
    <string name="create_acc">Create new account</string>
    <string name="acc_exists">Already got an account? Login</string>
    <string name="logout">Logout</string>

    <!-- Strings related to Settings -->
    <string name="settings">Settings</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
