<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jessica.venus_match.Edit_Preferences">

    <!--- Gender preference -->
    <TextView
        android:id="@+id/gender_pref"
        android:layout_width="139dp"
        android:layout_height="27dp"
        android:text="@string/gender_pref"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <!--- Male switch -->
    <Switch
        android:id="@+id/male_pref"
        android:layout_width="105dp"
        android:layout_height="29dp"
        android:text="@string/male_pref"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="43dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <!--- Female switch -->
    <Switch
        android:id="@+id/female_pref"
        android:layout_width="106dp"
        android:layout_height="27dp"
        android:text="@string/female_pref"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="83dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <!--- Age preference -->
    <TextView
        android:id="@+id/age_pref"
        android:layout_width="223dp"
        android:layout_height="27dp"
        android:text="@string/age_pref"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="127dp"
        android:layout_marginStart="16dp" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="133dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="161dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <!--- Employment preference -->
    <TextView
        android:id="@+id/employment_status"
        android:layout_width="229dp"
        android:layout_height="29dp"
        android:text="@string/employment_status"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="222dp"
        android:layout_marginStart="16dp" />

    <!--- Full-time switch -->
    <Switch
        android:id="@+id/full_time"
        android:layout_width="170dp"
        android:layout_height="31dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="258dp"
        android:text="@string/full_time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp" />

    <!--- Part-time switch -->
    <Switch
        android:id="@+id/part_time"
        android:layout_width="170dp"
        android:layout_height="27dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="295dp"
        android:text="@string/part_time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp" />

    <!--- Casual employment switch -->
    <Switch
        android:id="@+id/casual_emp"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="332dp"
        android:text="@string/casual_emp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp" />

    <!--- Student switch -->
    <Switch
        android:id="@+id/student"
        android:layout_width="169dp"
        android:layout_height="27dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="375dp"
        android:text="@string/student"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp" />

    <!--- Dating preference -->
    <TextView
        android:id="@+id/dating_pref"
        android:layout_width="157dp"
        android:layout_height="20dp"
        android:text="@string/dating_pref"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="419dp"
        android:layout_marginStart="16dp" />

    <!--- Casual switch -->
    <Switch
        android:id="@+id/cas_dating"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:text="@string/cas_dating"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="446dp"
        android:layout_marginStart="16dp" />

    <!--- Serious switch -->
    <Switch
        android:id="@+id/serious_dating"
        android:layout_width="102dp"
        android:layout_height="26dp"
        android:text="@string/serious_dating"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="480dp"
        android:layout_marginStart="16dp" />

    <!--- Location preference -->
    <TextView
        android:id="@+id/location"
        android:layout_width="255dp"
        android:layout_height="25dp"
        android:text="@string/location"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="522dp"
        android:layout_marginStart="16dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="256dp"
        android:layout_height="39dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="560dp" />

</android.support.constraint.ConstraintLayout>
