<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/toolbar"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            app:contentScrim="?attr/colorPrimary">

            <include
                layout="@layout/toolbar_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="688dp"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.jessica.venus_match.view.Profile">

            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="145dp"
                android:layout_height="173dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/profile_pic_desc"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="33dp"
                android:layout_marginLeft="178dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="178dp" />

            <ImageButton
                android:id="@+id/upload"
                android:layout_width="39dp"
                android:layout_height="38dp"
                android:layout_marginLeft="122dp"
                android:layout_marginTop="151dp"
                android:contentDescription="@string/upload_pic_desc"
                android:src="@drawable/ic_upload"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="122dp" />

            <TextView
                android:id="@+id/about_label"
                android:layout_width="94dp"
                android:layout_height="23dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="202dp"
                android:text="@string/about_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/about_desc"
                android:layout_width="383dp"
                android:layout_height="61dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="231dp"
                android:ems="10"
                android:hint="@string/about_desc"
                android:inputType="textMultiLine"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/preferences_label"
                android:layout_width="113dp"
                android:layout_height="24dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="310dp"
                android:text="@string/preferences_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/save_btn"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:onClick="update_profile"
                android:text="@string/save_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/username_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="178dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="178dp" />

            <TextView
                android:id="@+id/gender_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_label"
                android:textStyle="bold"
                android:layout_marginLeft="180dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="86dp"
                android:layout_marginStart="178dp" />

            <Spinner
                android:id="@+id/gender_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="180dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="103dp"
                android:layout_marginStart="178dp" />

            <TextView
                android:id="@+id/country_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_label"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="185dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="141dp"
                android:layout_marginStart="178dp" />

            <Spinner
                android:id="@+id/country_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="165dp"
                android:layout_marginLeft="180dp"
                app:layout_constraintLeft_toLeftOf="parent" />

            <!--- Male switch -->
            <Switch
                android:id="@+id/male_pref"
                android:layout_width="105dp"
                android:layout_height="29dp"
                android:text="@string/male_pref"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="346dp"
                android:layout_marginLeft="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="16dp" />

            <!--- Female switch -->
            <Switch
                android:id="@+id/female_pref"
                android:layout_width="106dp"
                android:layout_height="27dp"
                android:text="@string/female_pref"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="385dp"
                android:layout_marginLeft="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="16dp" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
